<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wifi Security Auditor</string>
    <string name="bssid" translatable="false">BSSID</string>
    <string name="essid" translatable="false">ESSID</string>
    <string name="wpsPin" translatable="false">WPS PIN</string>
    <string name="connect">Connect</string>

    <string name="main_scan">Scan</string>
    <string name="main_manual">Manual Input</string>
    <string name="main_search">BSSID Search</string>

    <string name="sett_lang">Language</string>
    <string name="sett_lang_changed">Language changed, restart App</string>
    <string name="sett_conn">Use 3G connection</string>
    <string name="sett_conn_desc">If not only use WiFi for connections</string>
    <string name="sett_mail">Email</string>
    <string name="sett_mail_desc">To recieve important notices via mail also</string>
    <string name="sett_notif">Subscribe to news</string>
    <string name="sett_notif_desc">To recieve important notices via notification panel</string>


    <string name="scan_wifiDisabled">Wifi is disabled, enabling...</string>
    <string name="scan_scanning">Scanning...</string>
    <string name="scan_scanningFail" translatable="false">Problem start Scanning...</string>
    <string name="scan_context_insert">Insert to DB</string>
    <string name="scan_context_vulner">Check Vulnerabilities</string>
    <string name="scan_completed">Scan completed</string>

    <string name="manual_title" translatable="false">Manual WPS Connect</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_subscribe">Subscribe</string>
    <string name="menu_unsubscribe">Unsubscribe</string>

    <string name="vuln_checkCipher" translatable="false">Checking cipher...</string>
    <string name="vuln_checkWps" translatable="false">Checking WPS...</string>
    <string name="vuln_advWep">You have WEP cipher, this is lot insecure, you should change cipher to WPA/WPA2 mixed</string>
    <string name="vuln_advWpa">You have only WPA cipher, this can be insecure, you should change cipher to WPA/WPA2 mixed</string>
    <string name="vuln_cipherOk">You are using the best cipher avaible right now, WPA2 and/or MIXED.</string>
    <string name="vuln_advWPS">You have WPS activated, this is lot insecure, you should disable it</string>
    <string name="vuln_wpsOk">You have WPS disabled, best for security reasons.</string>
    <string name="vuln_ok">Congratulations! You have mixed WPA/WPA2 cipher and WPS disabled, you are secure UNLESS you\'re using default router PASSWORD.</string>


    <string name="about_desc" translatable="false">
        Hi, my name is Raül Valls and I\'m a almost graduated Software Enginyeer.
        I\'ve done this app only for educational purposes, don\'t be Evil, or at least not so much ;).
    </string>
</resources>
